# Trade

./: CMakeLists.txt  Makefile
src/: Com.cpp  Com.hh  Core.cpp  Core.hpp  Curve.cpp  Curve.hh  ICom.hh  ICore.hh  ICurve.hh  testAverage.cpp  trade.cpp
